# sourceruckus-clfs

./: .gitignore  .gitmodules  ChangeLog  MIRRORS  Makefile.am  NEWS  NOTES  NOTES.kernel_config  NOTES_32bit_badness  README  README.building  README.building_in_parallel  TODO  autogen.sh  configure.ac  get_sources  get_sources.sha256sums  init_submodules
src/: NOTES
src/bc/: SOURCE_URL
src/binutils/: SOURCE_URL
src/bzip2/: SOURCE_URL
src/check/: SOURCE_URL
src/cloog-ppl/: 0001-autotools-CLFS-LD_LIBRARY_PATH-patch.patch  0001-cloog-ppl-CLFS-LD_LIBRARY_PATH-patch.patch  cloog-ppl-0.15.10.tar.bz2  cloog-ppl-0.15.9.tar.bz2
src/eglibc/: SOURCE_URL
src/expect/: SOURCE_URL
src/file/: SOURCE_URL
src/gcc/: NOTES  SOURCE_URL
src/gettext/: NOTES  SOURCE_URL
src/glibc/: SOURCE_URL
src/gmp/: SOURCE_URL
src/help2man/: NOTES  SOURCE_URL  help2man-1.38.2.tar.bz2
src/mpc/: SOURCE_URL
src/mpfr/: SOURCE_URL
src/ncurses/: NOTES  SOURCE_URL  ncurses-5.7.tar.bz2
src/ppl/: 0001-configure-fix-__GMP_BITS_PER_MP_LIMB-check-for-newer.patch  0001-m4-fix-__GMP_BITS_PER_MP_LIMB-check-for-newer-GMP.patch  0002-m4-fixed-some-AC_LANG_CONFTEST-no-AC_LANG_SOURCE-war.patch
src/python/: 00102-lib64.patch_maybe  SOURCE_URL
src/python.old/: NOTES  SOURCE_URL
src/syslinux/: SOURCE_URL
src/tcl/: SOURCE_URL
src/texinfo/: 0002-pass-LDFLAGS-to-sub-configure.patch  SOURCE_URL  remove_lzma_configure.patch  texinfo-4.13a.tar.bz2
src/tzdata/: SOURCE_URL
src/zlib/: SOURCE_URL
utils/: Makefile.am  go  ruckus-builder.cfg.in  ruckus-builder.env.in
utils/bootstrap/: NOTES  README  go  ruckus_bootstrap_stage2
utils/bootstrap-cross/: Makefile.am  README  gcc-4.5.1-specs-1.patch  go
utils/bootstrap-cross/patches/eglibc/: 0001-disable-linking-to-libgcc_eh.patch  0002-ensure-NPTL-support.patch
utils/bootstrap-cross/patches/gcc/: 0001-use-linker-from-bootstrap-lib.patch  0002-more-defines-for-bootstrap-builds.patch  0003-set-CROSS_SYSTEM_HEADER_DIR.patch  SOURCE_URL
utils/bootstrap-early/: Makefile.am  NOTES  README  config.in  functions  functions_for_srp  go
utils/bootstrap-stage1/: Makefile.am  NOTES  README  go  go2
utils/bootstrap-stage1/config/: bb-config  fstab  group  inittab  kernel-config-32bit  kernel-config-64bit  mdev.conf  passwd  profile  rcS
utils/bootstrap-stage1/patches/ntfs-3g/: 0001-configure.ac-remove-ENABLE_CRYPTO-checks.patch
utils/bootstrap-stage2/: Makefile.am  NOTES  README  foo.c  go  init
utils/bootstrap/config/: bash_profile  fstab  group  inittab  kernel-config  mdev.conf  passwd
utils/bootstrap/patches/gcc/: 0001-set-NATIVE_SYSTEM_HEADER_DIR.patch
